# chat_server

./: .clang-format  CMakeLists.txt  commands.txt
apps/chat_server/: CMakeLists.txt  main.cpp
docker/: Dockerfile  entrypoint.sh
include/chat/app/handlers/: AuthHandlers.h  ChatHandlers.h  IAuthHandlers.h  IChatHandlers.h  IRoomHandlers.h  RoomHandlers.h
include/chat/app/services/: AuthService.h  RoomService.h
include/chat/core/: Command.h  Crypto.h  Log.h  Message.h  Types.h  WriteQueue.h  WriteQueueT.h
include/chat/infra/db/: IDatabase.h  IUserRepository.h
include/chat/infra/db/dao/: IUserDao.h  SqliteUserDao.h
include/chat/infra/db/sqlite/: SqliteDatabase.h  UserRepository.h
include/chat/infra/repos/: RoomRepository.h  UserRepository.h
include/chat/infra/security/: NonceStore.h
include/chat/protocol/: Aliases.h  Dto.h  ErrorCodes.h  JsonCodec.h  MessageTypes.h  Router.h  SessionCtx.h
include/chat/protocol/dto/: AuthDto.h  ChatDto.h  Dto.h  RoomDto.h
include/chat/protocol/types/: AuthTypes.h  ChatTypes.h  InfoTypes.h  RoomTypes.h
include/chat/server/: NickHash.h  NickRegistry.h  Room.h  Server.h  Session.h
include/chat/transport/: Server.h  Session.h
src/: main.cpp
src/Private/: Command.cpp  NickRegistry.cpp  RateLimiter.cpp  Room.cpp  Server.cpp  Session.cpp  WriteQueue.cpp
src/Public/: NickHash.h  NickRegistry.h  RateLimiter.h  Room.h  Server.h  Session.h  Types.h
src/chat/app/handlers/: AuthHandlers.cpp  ChatHandlers.cpp  RoomHandlers.cpp
src/chat/app/services/: AuthService.cpp  RoomService.cpp
src/core/: Command.cpp  Crypto.cpp  RateLimiter.cpp  WriteQueue.cpp
src/infra/db/dao/: SqliteUserDao.cpp
src/infra/db/sqlite/: SqliteDatabase.cpp  UserRepository.cpp
src/infra/repos/: RoomRepository.cpp  UserRepository.cpp
src/infra/security/: NonceStore.cpp
src/protocol/: Aliases.cpp  Dto.cpp  JsonCodec.cpp  Router.cpp
src/protocol/dto/: Dto.cpp
src/server/: NickRegistry.cpp  Room.cpp  Server.cpp  Session.cpp
src/transport/: Server.cpp  Session.cpp
